maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:71: error: too many arguments for method northRunnerMode: ()Unit
    sumTurns = northRunnerMode(sumTurns);
                              ^